version/0.30/_sources/api/solver/_autosummary/settings/axes.rst.txt
:orphan:

.. _axes:

axes
====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.axes
    :show-inheritance:

.. rubric:: Attributes

==========================================   ======================

Attribute                                                   Summary

==========================================   ======================
:ref:`x <x_1>`                                   X-axis properties.

:ref:`y <y_1>`                                   Y-axis properties.

:ref:`background_color <background_color>`        Background color.

==========================================   ======================

.. rubric:: Included in:

====================================================   =========================================================================

Parent                                                                                                                   Summary

====================================================   =========================================================================
:ref:`residual <residual>`                                 Options for controlling residual information that the solver reports.

:ref:`report_plots_child <report_plots_child>`                                              'child_object_type' of report_plots.

:ref:`histogram <histogram>`                                    Provides access to create new and edit existing histogram plots.

:ref:`cumulative_plot_child <cumulative_plot_child>`                                     'child_object_type' of cumulative_plot.

:ref:`solution_plot <solution_plot>`                                                                     Plot the solution data.

:ref:`profile_data <profile_data>`                                                                         Display profile data.

:ref:`interpolated_data <interpolated_data>`                                                          Display interpolated data.

====================================================   =========================================================================

